Fix GitHub Actions permission for deployment

--- a/.github/workflows/deploy-flutter.yml
+++ b/.github/workflows/deploy-flutter.yml
@@ -8,6 +8,9 @@ on:
       - 'mobile/**'
       - '.github/workflows/deploy-flutter.yml'
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
