--- a/.github/workflows/deploy-mobile-beta.yml
+++ b/.github/workflows/deploy-mobile-beta.yml
@@ -30,7 +30,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.19.0' # Use a stable version, or 'any'
+          flutter-version: 'any' # Use a stable version, or 'any'
 
       - name: Install dependencies
         working-directory: mobile
@@ -57,7 +57,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.19.0'
+          flutter-version: 'any'
 
       - name: Install dependencies
         working-directory: mobile
